test/lattests/extensions/objects1/bad/fieldNamedSelf.lat
class a {
    int self;
}

int main() { return 0; }